--- a/Site/assets/css/main.css
+++ b/Site/assets/css/main.css
@@ -2190,7 +2190,7 @@
 		border-radius: 6px;
 		box-shadow: 0 2px 0 0 #e5e5e5;
 		margin: 0 0 2em 0;
-		padding: 3em;
+		padding: auto;
 	}
 
 		.box > :last-child {
